# fibonacci_gpu

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
docker/: cuda.Dockerfile
src/: CMakeLists.txt  exclusive_scan_matmul.cu  exlusive_scan_intro.cu  fibonacci.cu  fibonacci_large.cu
